--- a/src/main/resources/templates/editEtudiant.html
+++ b/src/main/resources/templates/editEtudiant.html
@@ -42,7 +42,7 @@
                     </div>
                     <div class="form-group mt-2">
                         <label class="control-label">Gender</label>
-                        <input class="form-control" name="score" type="number" th:value="${etudiant.gender}">
+                        <input class="form-control" name="gender" type="text" th:value="${etudiant.gender}">
                         <span th:errors="${etudiant.gender}" class="text-danger"></span>
                     </div>
                     <div class="form-group mt-2">
