--- a/src/main/resources/templates/formEtudiant.html
+++ b/src/main/resources/templates/formEtudiant.html
@@ -24,7 +24,7 @@
                         <span th:errors="${etudiant.prenom}" class="text-danger"></span>
                     </div>
                     <div class="form-group mt-2">
-                        <label class="control-label">Nom</label>
+                        <label class="control-label">Email</label>
                         <input class="form-control" name="email" type="text" th:value="${etudiant.email}">
                         <span th:errors="${etudiant.email}" class="text-danger"></span>
                     </div>
@@ -36,7 +36,7 @@
                     </div>
                     <div class="form-group mt-2">
                         <label class="control-label">Gender</label>
-                        <input class="form-control" name="score" type="number" th:value="${etudiant.gender}">
+                        <input class="form-control" name="gender" type="text" th:value="${etudiant.gender}">
                         <span th:errors="${etudiant.gender}" class="text-danger"></span>
                     </div>
                     <div class="form-group mt-2">
